# qt_gui_core

qt_dotgraph/: CMakeLists.txt
qt_gui/: setup.py
qt_gui/src/qt_gui/: about_handler.py  dock_widget_title_bar.py  perspective_manager.py
qt_gui_cpp/: CMakeLists.txt
